# plating

./: .coverage.query.local.70160.XPmqpvix  .coverage.query.local.70160.XYqyWTwx  .gitguardian.yaml  .gitignore  .gitleaks.toml  .trufflehog-exclude-paths.txt  20250818-2118-garnish-refactor.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPONENTSETS_EXAMPLE.md  CONTRIBUTING.md  E2E_VERIFICATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  MIGRATION_TEST_RESULTS.md  OPTIONS_1_AND_4_COMPLETE.md  QUALITY_IMPROVEMENTS.md  README.md  STIR_HANGING_FIX.md  bf-20251028-144614.txt  chunk_aa  chunk_ab  chunk_ac  conform.py  direct_test.py  document_self.py  documentation_audit_summary.md  env.ps1  env.sh  mkdocs.yml  pyproject.toml  python_files.txt  regenerate_docs.py  setup.sh  simple_test.py  test_componentsets_direct.py  test_componentsets_standalone.py  test_function_docs.py  test_integration.py  test_real_pyvider_components.py  (+3 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.provide/: HANDOFF.md
.provide/foundry/: base-mkdocs.yml  gen_ref_pages.py
debug_docs/data_source/: nested_data_test_suite.md
debug_docs/function/: add.md  contains.md  divide.md  format.md  length.md  lens_jq.md  lookup.md  lower.md  replace.md  round.md  split.md  sum.md  tostring.md  upper.md
docs/: 04-authoring-plating-bundles.md  API.md  CHANGELOG.md  README.md  STATUS.md  api-reference.md  async-migration-guide.md  authoring-bundles.md  capabilities.md  cli-auto-detection.md  cli-reference.md  examples.md  index.md  performance.md  quick-start.md  registry-pattern.md  test-animations.md  troubleshooting.md
docs/.shared-theme/: README.md
docs/api/: index.md
docs/architecture/: 01-overview.md  04-garnish-asset-bundle-system.md
docs/future/: README.md  bundle-discovery-pattern.md  template-processing-pipeline.md
docs/getting-started/: index.md  installation.md
docs/history/: QUALITY_IMPROVEMENTS.md  README.md  TASKS_2_AND_4_COMPLETE.md
docs/resources/: adorner.md
scripts/: test-registry-url-alignment.sh
scripts/memray/: memray_doc_generator_stress.py  memray_schema_formatting_stress.py  memray_template_engine_stress.py
self_docs/resources/: dresser.md  plater.md  readme.md
site/: 404.html  index.html  objects.inv  sitemap.xml
site/04-authoring-garnish-bundles/: index.html
site/API/: index.html
site/CHANGELOG/: index.html
site/CONFIGURATION/: index.html
site/STATUS/: index.html
site/api/: index.html
site/api-reference/: index.html
site/authoring-bundles/: index.html
site/cli-reference/: index.html
site/examples/: index.html
site/getting-started/: index.html
site/performance/: index.html
site/quick-start/: index.html
site/registry-pattern/: index.html
site/search/: search_index.json
site/test-animations/: index.html
site/troubleshooting/: index.html
src/garnish/: __init__.py  _version.py  async_renderer.py  cli.py  config.py  dresser.py  error_handling.py  errors.py  garnish.py  garnish_renderer.py  generator.py  linting.py  models.py  plater.py  renderer.py  scaffolder.py  schema.py  template_filters.py  template_functions.py  templates.py  test_runner.py  types.py
src/plating/: __init__.py  _version.py  api.py  async_template_engine.py  bundles.py  cleaner.py  cli.py  component_sets.py  config.py  decorators.py  discovery.py  error_handling.py  errors.py  example_compiler.py  generator.py  linting.py  markdown_validator.py  models.py  operations.py  plater.py  plating.py  types.py  (+6 more)
test_docs/: index.md
tests/: __init__.py  conftest.py  test_adorner.py  test_async_renderer.py  test_capability_grouping.py  test_cli.py  test_cli_integration.py  test_component_sets.py  test_component_sets_core.py  test_content_merger.py  test_dresser.py  test_end_to_end.py  test_foundation_integration.py  test_garnish_bundle.py  test_garnish_discovery.py  test_grouped_compiler.py  test_guide_discovery.py  test_guide_processor.py  test_index_merger.py  test_integration.py  test_mkdocs_nav_generator.py  test_modern_api.py  test_module_imports.py  test_plater.py  test_plating_bundle.py  test_plating_discovery.py  test_provider_source_resolution.py  test_renderer.py  test_schema.py  test_stir_migration.py  test_subcategory_frontmatter.py  test_template_filters.py  test_template_functions.py
(+143 files in other folders)
